--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,17 @@
 .App {
   text-align: center;
+  background-image: url("https://i.pinimg.com/originals/63/36/cf/6336cfe397ac8990fd2f15c902fb7741.jpg");
+  background-size: cover;
+  background-repeat: repeat-y;
+  height: 500px;
+  font-size: large;
+  font-family: Satisfy;
+  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+
